# task-06---threads-rivkaadler1

./: README.md
task08_rivka_adler/: CMakeLists.txt
task08_rivka_adler/include/: CMakeLists.txt  Consumer.h  Helper.h  Message.h  Producer.h
task08_rivka_adler/src/: CMakeLists.txt  Consumer.cpp  Helper.cpp  Producer.cpp  main.cpp
